fixed css alignment issues with gurbani and arrows

--- a/src/scss/_panktee.scss
+++ b/src/scss/_panktee.scss
@@ -44,7 +44,7 @@
 }
 
 .display .akhar {
-  display: inline;
+  display: inline-block;
   transition: all .25s;
   padding-right: 0.5rem;
 }
